--- a/databases/sfcgal/Makefile
+++ b/databases/sfcgal/Makefile
@@ -1,8 +1,11 @@
 PORTNAME=	sfcgal
 DISTVERSIONPREFIX=	v
-DISTVERSION=	1.4.1
-PORTREVISION=	5
+DISTVERSION=	2.1.0
+PORTREVISION=	1
 CATEGORIES=	databases math graphics
+
+MASTER_SITES=	https://github.com/CGAL/cgal/releases/download/v${CGAL_VERSION}/:source1
+DISTFILES=	CGAL-${CGAL_VERSION}.tar.xz:source1
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Wrapper library around CGAL for PostGIS
@@ -11,18 +14,19 @@ WWW=		https://oslandia.gitlab.io/SFCGAL/
 LICENSE=	gpl2
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
-BUILD_DEPENDS=	cgal>0:math/cgal
 LIB_DEPENDS=	libboost_system.so:devel/boost-libs \
 		libgmp.so:math/gmp \
 		libmpfr.so:math/mpfr
 
 USES=		cmake compiler:c++14-lang
 USE_GITLAB=	yes
-GL_ACCOUNT=	Oslandia
+GL_ACCOUNT=	SFCGAL
 GL_PROJECT=	SFCGAL
-GL_TAGNAME=	2d6a1a89552f14fe2926038b7237686bb9e5472e
 USE_LDCONFIG=	yes
 
 PLIST_SUB=	SHL3=${PORTVERSION} SHL1=${PORTVERSION:R:R} DEBUG_SUFFIX=${WITH_DEBUG:Dd}
+CGAL_VERSION=	6.0.1
+
+CMAKE_ARGS+=	-DCGAL_DIR=${WRKDIR}/CGAL-${CGAL_VERSION}
 
 .include <bsd.port.mk>
