--- a/devel/xxhash/Makefile
+++ b/devel/xxhash/Makefile
@@ -1,5 +1,5 @@
 PORTNAME=	xxhash
-PORTVERSION=	0.8.2
+PORTVERSION=	0.8.3
 DISTVERSIONPREFIX=	v
 CATEGORIES=	devel
 
@@ -24,5 +24,7 @@ PLIST_SUB=	PORTVERSION=${PORTVERSION}
 USE_GITHUB=	yes
 GH_ACCOUNT=	Cyan4973
 GH_PROJECT=	xxHash
+
+PORTSCOUT=	limit:^v[0-9\.]*
 
 .include <bsd.port.mk>
