devel/thunar-vcs-plugin: update to 0.4

--- a/devel/thunar-vcs-plugin/Makefile
+++ b/devel/thunar-vcs-plugin/Makefile
@@ -1,39 +1,39 @@
-# Created by: Sergey V. Dyatko <sergey.dyatko@gmail.com>
-
 PORTNAME=	thunar-vcs-plugin
-PORTVERSION=	0.2.0
-PORTREVISION=	1
+PORTVERSION=	0.4.0
 CATEGORIES=	devel xfce
 MASTER_SITES=	XFCE/thunar-plugins
 DIST_SUBDIR=	xfce4
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Version Control System plugin for Thunar
+WWW=		https://docs.xfce.org/thunar-plugins/thunar-vcs-plugin
 
 LICENSE=	gpl2
 LICENSE_FILE=	${WRKSRC}/COPYING
 
-USES=		compiler:c11 gettext-tools gmake gnome libtool localbase \
-		pkgconfig tar:bzip2 xfce
-USE_GNOME=	cairo gtk30 glib20 intltool
+USES=		compiler:c11 gettext-tools gnome localbase meson pkgconfig \
+		tar:xz xfce
+USE_GNOME=	glib20 gtk30
 USE_XFCE=	libexo thunar
 
-GNU_CONFIGURE=	yes
-INSTALLS_ICONS=	yes
-INSTALL_TARGET=	install-strip
-
 OPTIONS_DEFINE=		GIT NLS SUBVERSION
-OPTIONS_DEFAULT=	SUBVERSION
+OPTIONS_DEFAULT=	GIT
 OPTIONS_SUB=		yes
 
-GIT_CONFIGURE_ENABLE=	git
 GIT_RUN_DEPENDS=	git:devel/git
+GIT_MESON_ENABLED=	git
 
-NLS_CONFIGURE_ENABLE=	nls
 NLS_USES=		gettext-runtime
 
-SUBVERSION_CONFIGURE_ENABLE=	subversion
-SUBVERSION_LIB_DEPENDS=		libsvn_client-1.so:devel/subversion \
-				libapr-1.so:devel/apr1
+.if ${WITH_SUBVERSION_VER:U} == LTS
+SUBVERSION_LIB_DEPENDS=		libsvn_client-1.so:devel/subversion-lts
+.else
+SUBVERSION_LIB_DEPENDS=		libsvn_client-1.so:devel/subversion
+.endif
+SUBVERSION_LIB_DEPENDS+=	libapr-1.so:devel/apr1
+SUBVERSION_MESON_ENABLED=	svn
+
+post-patch-NLS-off:
+	@${REINPLACE_CMD} -e "/^subdir('po')/d" ${WRKSRC}/meson.build
 
 .include <bsd.port.mk>
