--- a/x11/Makefile
+++ b/x11/Makefile
@@ -168,6 +168,7 @@ SUBDIR += rgb
 SUBDIR += runner
 SUBDIR += rxvt-unicode
 SUBDIR += scripts
+SUBDIR += sddm
 SUBDIR += sessreg
 SUBDIR += setxkbmap
 SUBDIR += slim
