security/linux-c7-cyrus-sasl2: update

--- a/security/linux-c7-cyrus-sasl2/Makefile
+++ b/security/linux-c7-cyrus-sasl2/Makefile
@@ -1,16 +1,15 @@
-# Created by: Piotr Kubaj <pkubaj@anongoth.pl>
-
 PORTNAME=	cyrus-sasl
 PORTVERSION=	2.1.26
-DISTVERSIONSUFFIX=	-23.el7
-PORTREVISION=	4
+DISTVERSIONSUFFIX=	-24.el7_9
+PORTREVISION=	5
 CATEGORIES=	security linux
 PKGNAMESUFFIX=	-lib
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	RFC 2222 SASL (Simple Authentication and Security Layer) (Linux CentOS ${LINUX_DIST_VER})
+WWW=		https://www.cyrusimap.org/sasl/
 
-LICENSE=	other
+LICENSE=	bsd4
 
 USES=		linux:c7
 USE_LDCONFIG=	yes
@@ -18,7 +17,7 @@ USE_LINUX_RPM=	yes
 
 LIB_DISTNAMES=	${PORTNAME}${PKGNAMESUFFIX}-${DISTVERSIONFULL}
 
-CONFLICTS=	linux-c6-${PORTNAME}${PKGNAMESUFFIX}-[0-9]*
+CONFLICTS=	linux-c6-${PORTNAME}${PKGNAMESUFFIX}
 DESCR=		${.CURDIR}/../${PORTNAME}2/pkg-descr
 DOCSDIR=	${PREFIX}/usr/share/doc/${PORTNAME}${PKGNAMESUFFIX}-${PORTVERSION}
 
