--- a/security/linux-c7-gnutls/Makefile
+++ b/security/linux-c7-gnutls/Makefile
@@ -1,5 +1,3 @@
-# Created by: Piotr Kubaj <pkubaj@anongoth.pl>
-
 PORTNAME=	gnutls
 PORTVERSION=	3.3.29
 DISTVERSIONSUFFIX=	-9.el7_6
@@ -7,15 +5,17 @@ CATEGORIES=	security linux
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	GNU Transport Layer Security library (Linux CentOS ${LINUX_DIST_VER})
+WWW=		https://gnutls.org/
 
 LICENSE=	lgpl2.1
 
-USES=		linux:c7
+USES=		cpe linux:c7
+CPE_VENDOR=	gnu
 USE_LDCONFIG=	yes
 USE_LINUX=	libtasn1 nettle p11-kit trousers
 USE_LINUX_RPM=	yes
 
-CONFLICTS=	linux-c6-${PORTNAME}-[0-9]*
+CONFLICTS=	linux-c6-${PORTNAME}
 DESCR=		${.CURDIR}/../${PORTNAME}/pkg-descr
 
 OPTIONS_DEFINE=	DOCS NLS
