add build2. drop bugzilla44

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -61,8 +61,8 @@ SUBDIR += boost-libs
 SUBDIR += boost-python-libs
 SUBDIR += boxfort
 SUBDIR += bsddialog
-SUBDIR += bugzilla44
 SUBDIR += bugzilla50
+SUBDIR += build2
 SUBDIR += bullet
 SUBDIR += capnproto
 SUBDIR += cargo-c
