--- a/multimedia/Makefile
+++ b/multimedia/Makefile
@@ -110,6 +110,7 @@ SUBDIR += mp4v2
 SUBDIR += mpeg2codec
 SUBDIR += mplayer
 SUBDIR += mplayer-skins
+SUBDIR += mpv
 SUBDIR += openh264
 SUBDIR += phonon
 SUBDIR += phonon-gstreamer
@@ -124,7 +125,6 @@ SUBDIR += py-gstreamer1
 SUBDIR += qt5-multimedia
 SUBDIR += qt6-multimedia
 SUBDIR += ringrtc
-SUBDIR += schroedinger
 SUBDIR += smpeg
 SUBDIR += streamlink
 SUBDIR += svt-av1
