--- a/print/linux-c7-freetype/Makefile
+++ b/print/linux-c7-freetype/Makefile
@@ -6,12 +6,13 @@ CATEGORIES=	print linux
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Font rendering engine (Linux CentOS ${LINUX_DIST_VER})
+WWW=		https://www.freetype.org/
 
 LICENSE=	other
 
-USES=		linux:c7
+USES=		cpe linux:c7
 USE_LDCONFIG=	yes
-USE_LINUX=	png
+USE_LINUX=	imageformats-libs
 USE_LINUX_RPM=	yes
 
 DESCR=		${.CURDIR}/../${PORTNAME}2/pkg-descr
