--- a/x11-toolkits/Makefile
+++ b/x11-toolkits/Makefile
@@ -80,6 +80,8 @@ SUBDIR += p5-Tk
 SUBDIR += pango
 SUBDIR += pangomm
 SUBDIR += pangox-compat
+SUBDIR += py-qt5-charts
+SUBDIR += py-qt5-datavis3d
 SUBDIR += py-tkinter
 SUBDIR += qt5-charts
 SUBDIR += qt5-datavis3d
