--- a/security/Makefile
+++ b/security/Makefile
@@ -211,6 +211,9 @@ SUBDIR += pinentry-gtk2
 SUBDIR += pinentry-qt5
 SUBDIR += pinentry-tty
 SUBDIR += pkcs11-helper
+SUBDIR += plasma6-kscreenlocker
+SUBDIR += plasma6-ksshaskpass
+SUBDIR += plasma6-kwallet-pam
 SUBDIR += pulledpork
 SUBDIR += py-SecretStorage
 SUBDIR += py-acme
