--- a/deskutils/Makefile
+++ b/deskutils/Makefile
@@ -3,6 +3,7 @@ COMMENT = Things that used to be on the desktop before computers were invented
 SUBDIR += affiche
 SUBDIR += akonadi-import-wizard
 SUBDIR += akonadiconsole
+SUBDIR += akregator
 SUBDIR += appwrapper
 SUBDIR += baobab
 SUBDIR += calibre
