--- a/devel/Makefile
+++ b/devel/Makefile
@@ -1029,6 +1029,10 @@ SUBDIR += php83-sysvshm
 SUBDIR += php83-tokenizer
 SUBDIR += physfs
 SUBDIR += pkgconf
+SUBDIR += plasma
+SUBDIR += plasma6-kwrited
+SUBDIR += plasma6-plasma-sdk
+SUBDIR += plasma6-plasma5support
 SUBDIR += poco
 SUBDIR += popt
 SUBDIR += projectcenter
