--- a/misc/Makefile
+++ b/misc/Makefile
@@ -1,5 +1,6 @@
 COMMENT = Miscellaneous utilities
 
+SUBDIR += artikulate
 SUBDIR += chef
 SUBDIR += chmlib
 SUBDIR += cinnamon-translations
@@ -35,6 +36,9 @@ SUBDIR += iso-codes
 SUBDIR += jishyo
 SUBDIR += kf5-purpose
 SUBDIR += kf6-purpose
+SUBDIR += kgeography
+SUBDIR += klettres
+SUBDIR += kwordquiz
 SUBDIR += linux-c7-sdl12-extralibs
 SUBDIR += linux-rl9-sdl12-extralibs
 SUBDIR += linux-rl9-sdl20-extralibs
@@ -44,6 +48,7 @@ SUBDIR += mbuffer
 SUBDIR += mc
 SUBDIR += metalink-tools
 SUBDIR += mime-support
+SUBDIR += minuet
 SUBDIR += mirmon
 SUBDIR += newer
 SUBDIR += nut
@@ -58,6 +63,7 @@ SUBDIR += p5-List-Compare
 SUBDIR += p5-Locale-US
 SUBDIR += p5-Software-License
 SUBDIR += p5-Software-License-CCpack
+SUBDIR += parley
 SUBDIR += patchutils
 SUBDIR += pciids
 SUBDIR += phone-de
