--- a/math/Makefile
+++ b/math/Makefile
@@ -3,6 +3,7 @@ COMMENT = Mathematics
 SUBDIR += Imath
 SUBDIR += R
 SUBDIR += adol-c
+SUBDIR += analitza
 SUBDIR += asl
 SUBDIR += atlas
 SUBDIR += blas
@@ -38,6 +39,8 @@ SUBDIR += gnumeric
 SUBDIR += gnuplot
 SUBDIR += gsl
 SUBDIR += ipopt
+SUBDIR += kalgebra
+SUBDIR += kbruch
 SUBDIR += kig
 SUBDIR += lapack
 SUBDIR += lapacke
