--- a/astro/Makefile
+++ b/astro/Makefile
@@ -5,6 +5,7 @@ SUBDIR += gpsbabel
 SUBDIR += gpsd
 SUBDIR += libnova
 SUBDIR += luna
+SUBDIR += marble
 SUBDIR += xearth
 
 .include <bsd.port.subdir.mk>
