--- a/math/Makefile
+++ b/math/Makefile
@@ -8,6 +8,7 @@ SUBDIR += asl
 SUBDIR += atlas
 SUBDIR += blas
 SUBDIR += blis
+SUBDIR += cantor
 SUBDIR += cbc
 SUBDIR += cblas
 SUBDIR += cgal
@@ -42,6 +43,7 @@ SUBDIR += ipopt
 SUBDIR += kalgebra
 SUBDIR += kbruch
 SUBDIR += kig
+SUBDIR += kmplot
 SUBDIR += lapack
 SUBDIR += lapacke
 SUBDIR += ldouble
