add kanagram, khangman, kanatest

--- a/games/Makefile
+++ b/games/Makefile
@@ -48,6 +48,9 @@ SUBDIR += iagno
 SUBDIR += ioquake3
 SUBDIR += ioquake3-server
 SUBDIR += jigsaw
+SUBDIR += kanagram
+SUBDIR += kanatest
+SUBDIR += khangman
 SUBDIR += lapispuzzle
 SUBDIR += libggz
 SUBDIR += libgnome-games-support
