--- a/games/kanatest/Makefile
+++ b/games/kanatest/Makefile
@@ -1,47 +1,33 @@
 PORTNAME=	kanatest
-PORTVERSION=	0.4.10
-PORTREVISION=	3
-CATEGORIES=	games
+PORTVERSION=	0.4.10.g20200611
+PORTREVISION=	0
+CATEGORIES=	games japanese
 
-MAINTAINER=	Clockwork6400@protonmail.com
+MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Japanese kana (Hiragana and Katakana) simple flashcard tool
-WWW=		https://github.com/Clockwork6400/kanatest
+WWW=		https://kanatest.sourceforge.io/
 
 LICENSE=	gpl2
-LICENSE_FILE=	${WRKSRC}/LICENSE
+LICENSE_FILE=	${WRKSRC}/COPYING
 
-LIB_DEPENDS+=	libharfbuzz.so:print/harfbuzz
-USES=		gmake gnome pkgconfig
-USE_GITHUB=	yes
-GH_ACCOUNT=	Clockwork6400
-USE_GNOME+=	atk cairo gdkpixbuf glib20 gtk30 libxml2 pango
+FETCH_DEPENDS=	git:devel/git
+LIB_DEPENDS=	libharfbuzz.so:print/harfbuzz
+
+USES=		gettext gmake gnome pkgconfig tar:xz
+USE_GNOME=	atk cairo gdkpixbuf glib20 gtk30 libxml2 pango
 GNU_CONFIGURE=	yes
-MAKE_ENV+=	LIBINTL="-lintl"
+MAKE_ENV=	LIBINTL="-lintl"
 
 OPTIONS_DEFINE=	NLS
 OPTIONS_SUB=	yes
 
-NLS_USES=		gettext
-NLS_CONFIGURE_ENABLE=	nls
-
-pre-configure:
-	${REINPLACE_CMD} '/LIBS/s|-lxml|-L${LOCALBASE}/lib &|' \
-		${WRKSRC}/configure
-	${REINPLACE_CMD} -e 's|-DGTK_DISABLE_DEPRECATED||g' \
-		${WRKSRC}/src/Makefile.in
-	${REINPLACE_CMD} -e '/^%.mo:/,/^$$/s/test[^;]*/${TRUE}/' \
-		-e '\|/usr/bin| { s||${LOCALBASE}/bin|; s|=|?=|; }' \
-		${WRKSRC}/po/Makefile.in
-	${REINPLACE_CMD} -e '/GTK_WIDGET_SET_FLAGS/ { \
-		s//gtk_widget_set_can_default/; \
-		s/GTK_CAN_DEFAULT/TRUE/; }' \
-		-e '/GTK_WIDGET_UNSET_FLAGS/ { \
-		s//gtk_widget_set_can_focus/; \
-		s/GTK_CAN_FOCUS/FALSE/; }' \
-		${WRKSRC}/src/about.c \
-		${WRKSRC}/src/chart.c \
-		${WRKSRC}/src/gui.c \
-		${WRKSRC}/src/options.c \
-		${WRKSRC}/src/stats.c
+# this will break when upstream is updating, but unfortunately
+# SF won't let us fetch individual commits.
+do-fetch:
+	@${MKDIR} ${_DISTDIR}
+	@cd ${_DISTDIR} && [ -f ${DISTNAME}.tar.xz ] || \
+	    git archive --format=tar --prefix=${DISTNAME}/ \
+	    --remote=git://git.code.sf.net/p/kanatest/code master | \
+	    ${XZ_CMD} >${DISTNAME}.tar.xz
 
 .include <bsd.port.mk>
