--- a/misc/Makefile
+++ b/misc/Makefile
@@ -35,6 +35,7 @@ SUBDIR += hwdata
 SUBDIR += iso-codes
 SUBDIR += jishyo
 SUBDIR += kdeedu
+SUBDIR += kdeedu-data
 SUBDIR += kf5-purpose
 SUBDIR += kf6-purpose
 SUBDIR += kgeography
