--- a/www/Makefile
+++ b/www/Makefile
@@ -35,7 +35,9 @@ SUBDIR += joomla4
 SUBDIR += kcgi
 SUBDIR += kdsoap
 SUBDIR += kdsoap-ws-discovery-client
+SUBDIR += kf5-khtml
 SUBDIR += kf5-kjs
+SUBDIR += kf5-kjsembed
 SUBDIR += libapreq2
 SUBDIR += libdatachannel
 SUBDIR += libdom
