--- a/deskutils/Makefile
+++ b/deskutils/Makefile
@@ -43,6 +43,7 @@ SUBDIR += jlj
 SUBDIR += libkdepim
 SUBDIR += libportal
 SUBDIR += kaddressbook
+SUBDIR += kalarm
 SUBDIR += kdeconnect-kde
 SUBDIR += kdepim
 SUBDIR += kdepim-addons
