--- a/x11/linux-c7-libxkbcommon/Makefile
+++ b/x11/linux-c7-libxkbcommon/Makefile
@@ -6,10 +6,12 @@ CATEGORIES=	x11 linux
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Keymap handling library (Linux CentOS ${LINUX_DIST_VER})
+WWW=		https://xkbcommon.org/
 
 LICENSE=	mit
 
-USES=		linux:c7
+USES=		cpe linux:c7
+CPE_VENDOR=	xkbcommon
 USE_LDCONFIG=	yes
 USE_LINUX_RPM=	yes
 
