--- a/x11/linux-c7-xcb-util-keysyms/Makefile
+++ b/x11/linux-c7-xcb-util-keysyms/Makefile
@@ -6,6 +6,7 @@ CATEGORIES=	x11 linux
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Port of Xlib's XImage and XShmImage functions (Linux CentOS ${LINUX_DIST_VER})
+WWW=		https://xcb.freedesktop.org/
 
 LICENSE=	mit
 
