--- a/japanese/p5-Jcode/Makefile
+++ b/japanese/p5-Jcode/Makefile
@@ -1,12 +1,13 @@
 PORTNAME=	Jcode
 PORTVERSION=	2.07
-CATEGORIES=	converters japanese perl5
+CATEGORIES=	japanese converters perl5
 MASTER_SITES=	CPAN
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Perl extension interface to convert Japanese text
+WWW=		https://metacpan.org/release/Jcode
 
-LICENSE=	artistic gpl
+LICENSE=	artistic gpl+
 LICENSE_COMB=	dual
 
 USES=		perl5
