converters/enca: www

--- a/converters/enca/Makefile
+++ b/converters/enca/Makefile
@@ -1,5 +1,3 @@
-# Created by: Alexandr Kovalenko <never@nevermind.kiev.ua>
-
 PORTNAME=	enca
 PORTVERSION=	1.19
 CATEGORIES=	converters textproc russian ukrainian
@@ -7,15 +5,16 @@ MASTER_SITES=	https://dl.cihar.com/enca/
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Detect encoding of text files
+WWW=		http://gitorious.org/enca
 
-BUILD_DEPENDS=	umap:${PORTSDIR}/converters/p5-Unicode-Map8
-LIB_DEPENDS=	librecode.so:${PORTSDIR}/converters/recode
-RUN_DEPENDS=	umap:${PORTSDIR}/converters/p5-Unicode-Map8
+BUILD_DEPENDS=	umap:converters/p5-Unicode-Map8
+LIB_DEPENDS=	librecode.so:converters/recode
+RUN_DEPENDS=	umap:converters/p5-Unicode-Map8
 
 LICENSE=	gpl2
 LICENSE_FILE=	${WRKSRC}/COPYING
 
-USES=		gmake iconv libtool pathfix pkgconfig tar:xz
+USES=		gmake iconv libtool localbase pathfix pkgconfig tar:xz
 USE_LDCONFIG=	yes
 GNU_CONFIGURE=	yes
 CONFIGURE_ARGS=	--with-html-dir=${DOCSDIR}
