--- a/www/Makefile
+++ b/www/Makefile
@@ -293,6 +293,7 @@ SUBDIR += qt6-webengine
 SUBDIR += qt6-websockets
 SUBDIR += qt6-webview
 SUBDIR += raphael
+SUBDIR += rubygem-addressable
 SUBDIR += rubygem-cgi
 SUBDIR += rubygem-hpricot
 SUBDIR += rubygem-httpclient
