--- a/devel/Makefile
+++ b/devel/Makefile
@@ -1575,6 +1575,7 @@ SUBDIR += rubygem-builder
 SUBDIR += rubygem-concurrent-ruby
 SUBDIR += rubygem-cool.io
 SUBDIR += rubygem-csv
+SUBDIR += rubygem-date
 SUBDIR += rubygem-drb
 SUBDIR += rubygem-getoptlong
 SUBDIR += rubygem-i18n
@@ -1590,6 +1591,7 @@ SUBDIR += rubygem-stringio
 SUBDIR += rubygem-strptime
 SUBDIR += rubygem-svn2git
 SUBDIR += rubygem-thread_safe
+SUBDIR += rubygem-timeout
 SUBDIR += rubygem-tzinfo
 SUBDIR += rubygem-tzinfo-data
 SUBDIR += rubygem-tzinfo1
