--- a/mail/Makefile
+++ b/mail/Makefile
@@ -140,6 +140,9 @@ SUBDIR += roundcube-classic
 SUBDIR += roundcube-larry
 SUBDIR += roundcube-thunderbird_labels
 SUBDIR += rspamd
+SUBDIR += rubygem-net-imap
+SUBDIR += rubygem-net-pop
+SUBDIR += rubygem-net-smtp
 SUBDIR += sendmail
 SUBDIR += spamass-rules
 SUBDIR += spamassassin
