--- a/mail/Makefile
+++ b/mail/Makefile
@@ -140,6 +140,8 @@ SUBDIR += roundcube-classic
 SUBDIR += roundcube-larry
 SUBDIR += roundcube-thunderbird_labels
 SUBDIR += rspamd
+SUBDIR += rubygem-mail
+SUBDIR += rubygem-mini_mime
 SUBDIR += rubygem-net-imap
 SUBDIR += rubygem-net-pop
 SUBDIR += rubygem-net-smtp
