--- a/deskutils/Makefile
+++ b/deskutils/Makefile
@@ -52,6 +52,8 @@ SUBDIR += keditbookmarks
 SUBDIR += kf6-kstatusnotifieritem
 SUBDIR += kmail
 SUBDIR += kmail-account-wizard
+SUBDIR += kongress
+SUBDIR += kontact
 SUBDIR += kruler
 SUBDIR += libportal-gtk3
 SUBDIR += libportal-gtk4
