--- a/deskutils/Makefile
+++ b/deskutils/Makefile
@@ -81,6 +81,8 @@ SUBDIR += systempreferences
 SUBDIR += toolboxkit
 SUBDIR += virt-manager
 SUBDIR += xcalendar
+SUBDIR += xdg-desktop-portal
+SUBDIR += xdg-terminal-exec
 SUBDIR += xfce4-notes-plugin
 SUBDIR += xfce4-notifyd
 SUBDIR += xfce4-tumbler
