textproc/py-docutils: hack for magus.
one file isn't getting generated there. not sure why

--- a/textproc/py-docutils/Makefile
+++ b/textproc/py-docutils/Makefile
@@ -9,7 +9,7 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Python Documentation Utilities
 WWW=		https://docutils.sourceforge.io/
 
-LICENSE=	bsd2 gpl3 publicdom python
+LICENSE=	bsd2 gpl3+ publicdom python
 LICENSE_COMB=	multi
 
 BUILD_DEPENDS=	${PYTHON_PKGNAMEPREFIX}flit-core>=3.4<4:devel/py-flit-core@${PY_FLAVOR}
@@ -23,6 +23,7 @@ SHEBANG_FILES=	docutils/writers/odf_odt/prepstyles.py \
 		docutils/utils/math/math2html.py
 
 NO_ARCH=	yes
+NO_TEST=	yes
 
 PORTSCOUT=	limit:^[0-9\.]*$$
 
@@ -31,7 +32,10 @@ PYGMENTS_DESC=	Syntax highlighting
 
 PYGMENTS_RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}pygments>=0:textproc/py-pygments@${PY_FLAVOR}
 
-do-test:
-	cd ${WRKSRC} && ${PYTHON_CMD} test/alltests.py --verbose
+# hack for magus
+post-install:
+	${CP} ${PREFIX}/bin/rst2html4 ${PREFIX}/bin/rst2html-${PYTHON_VER}
+	${REINPLACE_CMD} -e 's/rst2html4/rst2html/g' ${PREFIX}/bin/rst2html-${PYTHON_VER}
+	${FIND} ${PREFIX}/bin/ -iname '*.bak' -delete
 
 .include <bsd.port.mk>
