add a few kde apps

--- a/deskutils/Makefile
+++ b/deskutils/Makefile
@@ -44,6 +44,8 @@ SUBDIR += libkdepim
 SUBDIR += libportal
 SUBDIR += kaddressbook
 SUBDIR += kalarm
+SUBDIR += kcharselect
+SUBDIR += kchmviewer
 SUBDIR += kdeconnect-kde
 SUBDIR += kdepim
 SUBDIR += kdepim-addons
@@ -54,7 +56,10 @@ SUBDIR += kmail
 SUBDIR += kmail-account-wizard
 SUBDIR += kongress
 SUBDIR += kontact
+SUBDIR += korganizer
 SUBDIR += kruler
+SUBDIR += kweather
+SUBDIR += kweathercore
 SUBDIR += libportal-gtk3
 SUBDIR += libportal-gtk4
 SUBDIR += libportal-qt5
