--- a/deskutils/Makefile
+++ b/deskutils/Makefile
@@ -31,6 +31,7 @@ SUBDIR += gnustep-wrapper
 SUBDIR += go-for-it
 SUBDIR += grantlee-editor
 SUBDIR += grantleetheme
+SUBDIR += growl-for-linux
 SUBDIR += gtkjj
 SUBDIR += gucharmap
 SUBDIR += gworkspace
@@ -76,6 +77,7 @@ SUBDIR += lumina-textedit
 SUBDIR += mate-notification-daemon
 SUBDIR += menumaker
 SUBDIR += notification-daemon
+SUBDIR += notify-osd
 SUBDIR += owncloudclient
 SUBDIR += plopfolio
 SUBDIR += preferencepanes
