--- a/japanese/jishyo/Makefile
+++ b/japanese/jishyo/Makefile
@@ -1,7 +1,7 @@
 PORTNAME=	jishyo
 PORTVERSION=	0.1
-PORTREVISION=	4
-CATEGORIES=	misc japanese gnustep
+PORTREVISION=	13
+CATEGORIES=	japanese gnustep
 MASTER_SITES=	http://www.eskimo.com/~pburns/Dictionaries/files/
 DISTNAME=	Jishyo-${PORTVERSION}
 
@@ -9,18 +9,16 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	English to Japanese dictionary for GNUstep
 WWW=		https://www.eskimo.com/~pburns/Dictionaries/
 
-LICENSE=	gpl2
-
-USES=		gnustep
-USE_GNUSTEP=	back build
-
-CPPFLAGS+=	-fcommon
-
-WRKSRC=	${WRKDIR}/${DISTNAME}
+LICENSE=	gpl2+
 
 PORTSCOUT=	skipv:0.2
 
+USES=		gnustep
+USE_GNUSTEP=	back base build gui
+
+CPPFLAGS+=	-fcommon
+
 post-install:
-	${STRIP_CMD} ${PREFIX}/GNUstep/System/Applications/Jishyo.app/Jishyo
+	${STRIP_CMD} ${STAGEDIR}${PREFIX}/GNUstep/System/Applications/Jishyo.app/Jishyo
 
 .include <bsd.port.mk>
