--- a/japanese/font-mona-ipa/Makefile
+++ b/japanese/font-mona-ipa/Makefile
@@ -2,7 +2,7 @@ PORTNAME=	mona
 PORTVERSION=	1.0.8
 PORTREVISION=	8
 CATEGORIES=	japanese x11-fonts
-MASTER_SITES=	LOCAL/hrs
+MASTER_SITES=	FREEBSD_LOCAL/hrs
 PKGNAMEPREFIX=	ja-font-
 PKGNAMESUFFIX=	-ipa
 DISTNAME=	opfc-ModuleHP-1.1.1_withIPAMonaFonts-${PORTVERSION}
