--- a/lang/Makefile
+++ b/lang/Makefile
@@ -112,10 +112,12 @@ SUBDIR += ruby31
 SUBDIR += ruby32
 SUBDIR += rust
 SUBDIR += rust-bin
+SUBDIR += rust-bootstrap
 SUBDIR += scala
 SUBDIR += spidermonkey78
 SUBDIR += spidermonkey91
 SUBDIR += spidermonkey102
+SUBDIR += spidermonkey115
 SUBDIR += tcl-wrapper
 SUBDIR += tcl86
 SUBDIR += tolua
