--- a/www/Makefile
+++ b/www/Makefile
@@ -125,6 +125,7 @@ SUBDIR += p5-HTML-StripScripts-Parser
 SUBDIR += p5-HTML-Table
 SUBDIR += p5-HTML-Tagset
 SUBDIR += p5-HTML-Template
+SUBDIR += p5-HTML-Template-HashWrapper
 SUBDIR += p5-HTML-Tree
 SUBDIR += p5-HTTP-Body
 SUBDIR += p5-HTTP-CookieJar
@@ -161,6 +162,8 @@ SUBDIR += p5-Mozilla-CA
 SUBDIR += p5-POE-Component-Client-HTTP
 SUBDIR += p5-POE-Component-Client-UserAgent
 SUBDIR += p5-POE-Component-Server-HTTP
+SUBDIR += p5-POE-Component-Server-HTTPServer
+SUBDIR += p5-POE-Filter-HTTP-Parser 
 SUBDIR += p5-ParallelUserAgent
 SUBDIR += p5-Plack
 SUBDIR += p5-Router-Simple
