--- a/japanese/font-udev-gothic-hs/Makefile
+++ b/japanese/font-udev-gothic-hs/Makefile
@@ -31,7 +31,7 @@ UDEV_GOTHIC_35HS_DESC=		UDEVGothic35HS
 UDEV_GOTHIC_35HSJPDOC_DESC=	UDEVGothic35HSJPDOC
 UDEV_GOTHIC_35HSLG_DESC=	UDEVGothic35HSLG
 
-.include <bsd.port.options.mk>
+.include <bsd.mport.options.mk>
 
 .if ${PORT_OPTIONS:MUDEV_GOTHIC_HS}
 FONT_FAMILY+=	UDEVGothicHS
