--- a/graphics/Makefile
+++ b/graphics/Makefile
@@ -106,6 +106,8 @@ SUBDIR += kdegraphics-mobipocket
 SUBDIR += kdegraphics-svgpart
 SUBDIR += kdegraphics-thumbnailers
 SUBDIR += kdegraphics
+SUBDIR += kdiagram
+SUBDIR += kdiagram-qt6
 SUBDIR += kf5-kimageformats
 SUBDIR += kf5-kplotting
 SUBDIR += kf5-kquickcharts
