--- a/devel/Makefile
+++ b/devel/Makefile
@@ -351,6 +351,8 @@ SUBDIR += libnotify
 SUBDIR += libnsutils
 SUBDIR += liboil
 SUBDIR += libosinfo
+SUBDIR += libpafe
+SUBDIR += libpafe-ruby
 SUBDIR += libparserutils
 SUBDIR += libpasori
 SUBDIR += libpci
