--- a/devel/Makefile
+++ b/devel/Makefile
@@ -1594,6 +1594,7 @@ SUBDIR += rubygem-json
 SUBDIR += rubygem-json_pure
 SUBDIR += rubygem-launchy2
 SUBDIR += rubygem-logger
+SUBDIR += rubygem-mini_portile2
 SUBDIR += rubygem-msgpack
 SUBDIR += rubygem-multi_json
 SUBDIR += rubygem-mustache
@@ -1602,6 +1603,7 @@ SUBDIR += rubygem-native-package-installer
 SUBDIR += rubygem-observer
 SUBDIR += rubygem-ostruct
 SUBDIR += rubygem-pkg-config
+SUBDIR += rubygem-racc
 SUBDIR += rubygem-rake
 SUBDIR += rubygem-rdoc
 SUBDIR += rubygem-rubyinline
