add some ruby gems for x11 toolkits

--- a/x11-toolkits/Makefile
+++ b/x11-toolkits/Makefile
@@ -106,6 +106,19 @@ SUBDIR += qt6-quicktimeline
 SUBDIR += qt6-shadertools
 SUBDIR += qt6-virtualkeyboard
 SUBDIR += qt6pas
+SUBDIR += rubygem-gdk3
+SUBDIR += rubygem-gdk4
+SUBDIR += rubygem-gtk2
+SUBDIR += rubygem-gtk3
+SUBDIR += rubygem-gtk4
+SUBDIR += rubygem-gtksourceview3
+SUBDIR += rubygem-gtksourceview4
+SUBDIR += rubygem-pango
+SUBDIR += rubygem-poppler
+SUBDIR += rubygem-tk
+SUBDIR += rubygem-uh
+SUBDIR += rubygem-vte3
+SUBDIR += rubygem-vte4
 SUBDIR += sdl_pango
 SUBDIR += sdl2_pango
 SUBDIR += shared-desktop-ontologies
