add kitinerary and libphonenumber, kpkpass

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -358,6 +358,7 @@ SUBDIR += libpasori
 SUBDIR += libpci
 SUBDIR += libpciaccess
 SUBDIR += libpeas
+SUBDIR += libphonenumber
 SUBDIR += libplist
 SUBDIR += libpthread-stubs
 SUBDIR += librest
