add some ruby db

--- a/databases/Makefile
+++ b/databases/Makefile
@@ -196,6 +196,14 @@ SUBDIR += redis74
 SUBDIR += rrdtool
 SUBDIR += ruby-bdb
 SUBDIR += ruby-xapian
+SUBDIR += rubygem-mysql
+SUBDIR += rubygem-pg
+SUBDIR += rubygem-redis
+SUBDIR += rubygem-redis-client
+SUBDIR += rubygem-ruby-mysql
+SUBDIR += rubygem-sqlite3
+SUBDIR += rubygem-sqlite3-ruby
+SUBDIR += rubygem-sqlite31
 SUBDIR += sfcgal
 SUBDIR += spatialite
 SUBDIR += sqlclient
