--- a/net/Makefile
+++ b/net/Makefile
@@ -112,6 +112,7 @@ SUBDIR += libgrss
 SUBDIR += libgweather
 SUBDIR += libgweather4
 SUBDIR += libkgapi
+SUBDIR += libksieve
 SUBDIR += libmateweather
 SUBDIR += libmaxminddb
 SUBDIR += libnatpmp
