--- a/security/py-openssl/Makefile
+++ b/security/py-openssl/Makefile
@@ -1,10 +1,10 @@
 PORTNAME=	openssl
-PORTVERSION=	23.3.0
+PORTVERSION=	25.0.0
 PORTEPOCH=	1
 CATEGORIES=	security python
 MASTER_SITES=	PYPI
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
-DISTNAME=	pyOpenSSL-${PORTVERSION}
+DISTNAME=	pyopenssl-${PORTVERSION}
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Python interface to the OpenSSL library
@@ -12,6 +12,8 @@ WWW=		https://github.com/pyca/pyopenssl
 
 LICENSE=	Apache-2.0
 LICENSE_FILE=	${WRKSRC}/LICENSE
+
+RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}typing-extensions>=4.9:devel/py-typing-extensions@${PY_FLAVOR}
 
 USES=		cpe python
 USE_PYTHON=	autoplist concurrent cryptography distutils pythonprefix
