update some python libs

--- a/textproc/py-sphinx-basic-ng/Makefile
+++ b/textproc/py-sphinx-basic-ng/Makefile
@@ -1,5 +1,6 @@
 PORTNAME=	sphinx-basic-ng
-PORTVERSION=	0.0.1a12
+PORTVERSION=	1.0.0b2
+PORTREVISION=	1
 CATEGORIES=	textproc python
 MASTER_SITES=	PYPI
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
@@ -7,15 +8,18 @@ DISTNAME=	sphinx_basic_ng-${PORTVERSION}
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Modern skeleton for Sphinx themes
-WWW=		https://github.com/pradyunsg/sphinx-basic-ng
+WWW=		https://sphinx-basic-ng.readthedocs.io/en/latest/ \
+		https://github.com/pradyunsg/sphinx-basic-ng
 
 LICENSE=	mit
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
-RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}sphinx>=4.0,1<6.0,1:textproc/py-sphinx@${PY_FLAVOR}
+BUILD_DEPENDS=	${PYTHON_PKGNAMEPREFIX}setuptools>=0:devel/py-setuptools@${PY_FLAVOR} \
+		${PYTHON_PKGNAMEPREFIX}wheel>=0:devel/py-wheel@${PY_FLAVOR}
+RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}sphinx>=4.0,1:textproc/py-sphinx@${PY_FLAVOR}
 
 USES=		python
-USE_PYTHON=	autoplist concurrent distutils
+USE_PYTHON=	autoplist concurrent pep517
 
 NO_ARCH=	yes
 
