--- a/textproc/py-sphinx-copybutton/Makefile
+++ b/textproc/py-sphinx-copybutton/Makefile
@@ -1,20 +1,24 @@
 PORTNAME=	sphinx-copybutton
-PORTVERSION=	0.5.1
+PORTVERSION=	0.5.2
+PORTREVISION=	1
 CATEGORIES=	textproc python
 MASTER_SITES=	PYPI
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Add a copy button to each of your code cells
-WWW=		https://github.com/executablebooks/sphinx-copybutton
+WWW=		https://sphinx-copybutton.readthedocs.io/en/latest/ \
+		https://github.com/executablebooks/sphinx-copybutton
 
 LICENSE=	mit
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
+BUILD_DEPENDS=	${PYTHON_PKGNAMEPREFIX}setuptools>=0:devel/py-setuptools@${PY_FLAVOR} \
+		${PYTHON_PKGNAMEPREFIX}wheel>=0:devel/py-wheel@${PY_FLAVOR}
 RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}sphinx>=1.8,1:textproc/py-sphinx@${PY_FLAVOR}
 
 USES=		python
-USE_PYTHON=	autoplist concurrent distutils
+USE_PYTHON=	autoplist concurrent pep517
 
 NO_ARCH=	yes
 
