--- a/textproc/py-sphinx_rtd_theme/Makefile
+++ b/textproc/py-sphinx_rtd_theme/Makefile
@@ -1,17 +1,19 @@
 PORTNAME=	sphinx_rtd_theme
-PORTVERSION=	0.4.3
+PORTVERSION=	1.0.0
+PORTREVISION=	1
 CATEGORIES=	textproc python
 MASTER_SITES=	PYPI
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Mobile-friendly py-sphinx theme
+WWW=		https://github.com/readthedocs/sphinx_rtd_theme
 
 LICENSE=	mit
-
-USES=		python
-USE_PYTHON=	distutils autoplist
+LICENSE_FILE=	${WRKSRC}/LICENSE
 
 NO_ARCH=	yes
+USES=		python
+USE_PYTHON=	distutils autoplist
 
 .include <bsd.port.mk>
