--- a/textproc/py-sphinxcontrib-bibtex/Makefile
+++ b/textproc/py-sphinxcontrib-bibtex/Makefile
@@ -1,23 +1,27 @@
 PORTNAME=	sphinxcontrib-bibtex
-PORTVERSION=	2.5.0
+PORTVERSION=	2.6.3
 CATEGORIES=	textproc python
 MASTER_SITES=	PYPI
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
+DISTNAME=	sphinxcontrib_bibtex-${PORTVERSION}
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Sphinx extension for BibTeX style citations
-WWW=		https://github.com/mcmtroffaes/sphinxcontrib-bibtex
+WWW=		https://sphinxcontrib-bibtex.readthedocs.io/en/latest/ \
+		https://github.com/mcmtroffaes/sphinxcontrib-bibtex
 
 LICENSE=	bsd2
 LICENSE_FILE=	${WRKSRC}/LICENSE.rst
 
+BUILD_DEPENDS=	${PYTHON_PKGNAMEPREFIX}setuptools>=0:devel/py-setuptools@${PY_FLAVOR} \
+		${PYTHON_PKGNAMEPREFIX}wheel>=0:devel/py-wheel@${PY_FLAVOR}
 RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}docutils>=0.8,1:textproc/py-docutils@${PY_FLAVOR} \
 		${PYTHON_PKGNAMEPREFIX}pybtex>=0.24:textproc/py-pybtex@${PY_FLAVOR} \
 		${PYTHON_PKGNAMEPREFIX}pybtex-docutils>=1.0.0:textproc/py-pybtex-docutils@${PY_FLAVOR} \
-		${PYTHON_PKGNAMEPREFIX}sphinx>=2.1,1:textproc/py-sphinx@${PY_FLAVOR}
+		${PYTHON_PKGNAMEPREFIX}sphinx>=3.5,1:textproc/py-sphinx@${PY_FLAVOR}
 
 USES=		python
-USE_PYTHON=	autoplist concurrent distutils
+USE_PYTHON=	autoplist concurrent pep517
 
 NO_ARCH=	yes
 
@@ -25,6 +29,10 @@ NO_ARCH=	yes
 
 .if ${PYTHON_REL} < 31000
 RUN_DEPENDS+=	${PYTHON_PKGNAMEPREFIX}importlib-metadata>=3.6:devel/py-importlib-metadata@${PY_FLAVOR}
+.endif
+
+.if ${PYTHON_REL} >= 31200
+RUN_DEPENDS+=	${PYTHON_PKGNAMEPREFIX}setuptools>=0:devel/py-setuptools@${PY_FLAVOR}
 .endif
 
 .include <bsd.port.post.mk>
