--- a/textproc/py-sphinxcontrib-devhelp/Makefile
+++ b/textproc/py-sphinxcontrib-devhelp/Makefile
@@ -1,8 +1,9 @@
 PORTNAME=	sphinxcontrib-devhelp
-PORTVERSION=	1.0.2
+PORTVERSION=	2.0.0
 CATEGORIES=	textproc python
 MASTER_SITES=	PYPI
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
+DISTNAME=	${PORTNAME:C/-/_/}-${PORTVERSION}
 DIST_SUBDIR=	python
 
 MAINTAINER=	ports@MidnightBSD.org
@@ -10,10 +11,13 @@ COMMENT=	Sphinx extension which outputs Devhelp document
 WWW=		https://www.sphinx-doc.org/
 
 LICENSE=	bsd2
-LICENSE_FILE=	${WRKSRC}/LICENSE
+LICENSE_FILE=	${WRKSRC}/LICENCE.rst
 
-USES=		python:3.5+
-USE_PYTHON=	autoplist distutils concurrent
+USES=		python
+USE_PYTHON=	autoplist concurrent pep517
+
+BUILD_DEPENDS=	${PYTHON_PKGNAMEPREFIX}flit-core>=3.2.0<4:devel/py-flit-core@${PY_FLAVOR}
+
 NO_ARCH=	yes
 NO_TEST=	yes
 
