--- a/security/Makefile
+++ b/security/Makefile
@@ -40,6 +40,7 @@ SUBDIR += duo
 SUBDIR += easy-rsa
 SUBDIR += fakeroot
 SUBDIR += firehol-ip-list
+SUBDIR += fprintd
 SUBDIR += gcr
 SUBDIR += gcr3
 SUBDIR += gnome-keyring
@@ -71,6 +72,7 @@ SUBDIR += libassuan
 SUBDIR += libcaes
 SUBDIR += libcryptui
 SUBDIR += libfido2
+SUBDIR += libfprint
 SUBDIR += libgcrypt
 SUBDIR += libgnome-keyring
 SUBDIR += libgpg-error
